--- a/translations/lua/translated/mudlet-lua_es_ES.json
+++ b/translations/lua/translated/mudlet-lua_es_ES.json
@@ -6,5 +6,9 @@
   "AdjustableContainer.save": {
     "message": "Guardar",
     "description": "saves the containers settings"
+  },
+  "AdjustableContainer.disconnect": {
+    "message": "Desconectar ",
+    "description": "disconnect your container from the border frame"
   }
 }
