--- a/translations/lua/translated/mudlet-lua_fr_FR.json
+++ b/translations/lua/translated/mudlet-lua_fr_FR.json
@@ -6,5 +6,9 @@
   "AdjustableContainer.save": {
     "message": "Enregistrer",
     "description": "saves the containers settings"
+  },
+  "AdjustableContainer.disconnect": {
+    "message": "Déconnecter ",
+    "description": "disconnect your container from the border frame"
   }
 }
