--- a/translations/lua/translated/mudlet-lua_nl_NL.json
+++ b/translations/lua/translated/mudlet-lua_nl_NL.json
@@ -1,1 +1,6 @@
-{}
+{
+  "AdjustableContainer.disconnect": {
+    "message": "Verbreek verbinding ",
+    "description": "disconnect your container from the border frame"
+  }
+}
