--- a/translations/lua/translated/mudlet-lua_pl_PL.json
+++ b/translations/lua/translated/mudlet-lua_pl_PL.json
@@ -14,5 +14,9 @@
   "AdjustableContainer.save": {
     "message": "Zapisz",
     "description": "saves the containers settings"
+  },
+  "AdjustableContainer.disconnect": {
+    "message": "Rozłącz się ",
+    "description": "disconnect your container from the border frame"
   }
 }
