--- a/translations/lua/translated/mudlet-lua_it_IT.json
+++ b/translations/lua/translated/mudlet-lua_it_IT.json
@@ -58,5 +58,13 @@
   "AdjustableContainer.min_restore": {
     "message": "Min/Ripristina",
     "description": "label to minimize/restore the container"
+  },
+  "AdjustableContainer.connectTo": {
+    "message": "Connetti a: ",
+    "description": "connect your container to a border to create a frame"
+  },
+  "AdjustableContainer.disconnect": {
+    "message": "Disconnetti ",
+    "description": "disconnect your container from the border frame"
   }
 }
