--- a/translations/lua/translated/mudlet-lua_ru_RU.json
+++ b/translations/lua/translated/mudlet-lua_ru_RU.json
@@ -58,5 +58,13 @@
   "AdjustableContainer.min_restore": {
     "message": "Мин/Восстановить",
     "description": "label to minimize/restore the container"
+  },
+  "AdjustableContainer.connectTo": {
+    "message": "Подключиться к: ",
+    "description": "connect your container to a border to create a frame"
+  },
+  "AdjustableContainer.disconnect": {
+    "message": "Отключиться ",
+    "description": "disconnect your container from the border frame"
   }
 }
