--- a/translations/lua/translated/mudlet-lua_it_IT.json
+++ b/translations/lua/translated/mudlet-lua_it_IT.json
@@ -66,5 +66,21 @@
   "AdjustableContainer.disconnect": {
     "message": "Disconnetti ",
     "description": "disconnect your container from the border frame"
+  },
+  "Mudlet.packageInstallSuccess": {
+    "message": "Pacchetto '%s' installato con successo.",
+    "description": "Success message after drag&drop of package file onto Mudlet - %s is the file name"
+  },
+  "Mudlet.packageInstallFail": {
+    "message": "Installazione pacchetto '%s' fallita.",
+    "description": "Failure message after drag&drop of package file onto Mudlet - %s is the file name"
+  },
+  "Mudlet.prefixOk": {
+    "message": "[  OK  ]  - ",
+    "description": "Start of the line for messages telling the player something is okay. Keep at 12 characters length for nice alignment!"
+  },
+  "Mudlet.prefixWarn": {
+    "message": "[ WARN ]  - ",
+    "description": "Start of the line for messages warning the player about something. Keep at 12 characters length for nice alignment!"
   }
 }
