--- a/translations/lua/translated/mudlet-lua_ru_RU.json
+++ b/translations/lua/translated/mudlet-lua_ru_RU.json
@@ -66,5 +66,21 @@
   "AdjustableContainer.disconnect": {
     "message": "Отключиться ",
     "description": "disconnect your container from the border frame"
+  },
+  "Mudlet.packageInstallSuccess": {
+    "message": "Пакет '%s' успешно установлен.",
+    "description": "Success message after drag&drop of package file onto Mudlet - %s is the file name"
+  },
+  "Mudlet.packageInstallFail": {
+    "message": "Не удалось установить пакет '%s'.",
+    "description": "Failure message after drag&drop of package file onto Mudlet - %s is the file name"
+  },
+  "Mudlet.prefixOk": {
+    "message": "[  OK  ]  - ",
+    "description": "Start of the line for messages telling the player something is okay. Keep at 12 characters length for nice alignment!"
+  },
+  "Mudlet.prefixWarn": {
+    "message": "[ ВНИМ ]  - ",
+    "description": "Start of the line for messages warning the player about something. Keep at 12 characters length for nice alignment!"
   }
 }
