--- a/translations/lua/mudlet-lua.json
+++ b/translations/lua/mudlet-lua.json
@@ -75,6 +75,10 @@
     "message":"Package '%s' installation failed.",
     "description":"Failure message after drag&drop of package file onto Mudlet - %s is the file name"
   },
+  "Mudlet.packageDownloading": {
+    "message":"Downloading package from %s.",
+    "description": "Download package from Url for installation - %s is source url"
+  },
   "Mudlet.prefixOk": {
     "message":"[  OK  ]  - ",
     "description":"Start of the line for messages telling the player something is okay. Keep at 12 characters length for nice alignment!"
@@ -82,5 +86,9 @@
   "Mudlet.prefixWarn": {
     "message":"[ WARN ]  - ",
     "description":"Start of the line for messages warning the player about something. Keep at 12 characters length for nice alignment!"
+  },
+  "Mudlet.prefixInfo": {
+    "message":"[ INFO ]  - ",
+    "description":"Start of the line for messages informing the player about something. Keep at 12 characters length for nice alignment!"
   }
 }
