--- a/translations/lua/translated/mudlet-lua_ru_RU.json
+++ b/translations/lua/translated/mudlet-lua_ru_RU.json
@@ -75,6 +75,10 @@
     "message": "Не удалось установить пакет '%s'.",
     "description": "Failure message after drag&drop of package file onto Mudlet - %s is the file name"
   },
+  "Mudlet.packageDownloading": {
+    "message": "Скачивание пакета с %s.",
+    "description": "Download package from Url for installation - %s is source url"
+  },
   "Mudlet.prefixOk": {
     "message": "[  OK  ]  - ",
     "description": "Start of the line for messages telling the player something is okay. Keep at 12 characters length for nice alignment!"
@@ -82,5 +86,9 @@
   "Mudlet.prefixWarn": {
     "message": "[ ВНИМ ]  - ",
     "description": "Start of the line for messages warning the player about something. Keep at 12 characters length for nice alignment!"
+  },
+  "Mudlet.prefixInfo": {
+    "message": "[ ИНФО ]  - ",
+    "description": "Start of the line for messages informing the player about something. Keep at 12 characters length for nice alignment!"
   }
 }
