--- a/translations/lua/translated/mudlet-lua_en_GB.json
+++ b/translations/lua/translated/mudlet-lua_en_GB.json
@@ -75,6 +75,14 @@
     "message": "Installing '%s' failed: %s",
     "description": "Failure message after drag&drop of package file onto Mudlet - %s is the file name"
   },
+  "Mudlet.moduleInstallSuccess": {
+    "message": "Module '%s' installed successfully.",
+    "description": "Success message after drag&drop of module file onto Mudlet - %s is the file name"
+  },
+  "Mudlet.moduleInstallFail": {
+    "message": "Installing '%s' failed: %s",
+    "description": "Failure message after drag&drop of module file onto Mudlet - %s is the file name"
+  },
   "Mudlet.packageDownloading": {
     "message": "Downloading package from %s.",
     "description": "Download package from Url for installation - %s is source url"
