--- a/translations/lua/translated/mudlet-lua_it_IT.json
+++ b/translations/lua/translated/mudlet-lua_it_IT.json
@@ -75,6 +75,14 @@
     "message": "Installazione di '%s' fallita: %s",
     "description": "Failure message after drag&drop of package file onto Mudlet - %s is the file name"
   },
+  "Mudlet.moduleInstallSuccess": {
+    "message": "Modulo '%s' installato con successo.",
+    "description": "Success message after drag&drop of module file onto Mudlet - %s is the file name"
+  },
+  "Mudlet.moduleInstallFail": {
+    "message": "Installazione di '%s' fallita: %s",
+    "description": "Failure message after drag&drop of module file onto Mudlet - %s is the file name"
+  },
   "Mudlet.packageDownloading": {
     "message": "Download del pacchetto da %s.",
     "description": "Download package from Url for installation - %s is source url"
