--- a/translations/lua/translated/mudlet-lua_ru_RU.json
+++ b/translations/lua/translated/mudlet-lua_ru_RU.json
@@ -75,6 +75,14 @@
     "message": "Установка '%s' не удалась: %s",
     "description": "Failure message after drag&drop of package file onto Mudlet - %s is the file name"
   },
+  "Mudlet.moduleInstallSuccess": {
+    "message": "Модуль '%s' успешно установлен.",
+    "description": "Success message after drag&drop of module file onto Mudlet - %s is the file name"
+  },
+  "Mudlet.moduleInstallFail": {
+    "message": "Не удалось установить '%s': %s",
+    "description": "Failure message after drag&drop of module file onto Mudlet - %s is the file name"
+  },
   "Mudlet.packageDownloading": {
     "message": "Скачивание пакета с %s.",
     "description": "Download package from Url for installation - %s is source url"
